test/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: grafana
        image: ghcr.io/glueops/cortex-grafana
        ports:
        - containerPort: 3000
